--- a/css/reset.css
+++ b/css/reset.css
@@ -1,6 +1,14 @@
+body{
+  font-family: "Fira Code", helvetica, sans-serif;
+}
+
 body,
 h1,
 h2,
 h3 {
   margin: 0;
+}
+button{
+  border: none;
+  font-family: inherit;
 }
