Create the -second variation to Title

--- a/css/components/title.css
+++ b/css/components/title.css
@@ -4,3 +4,8 @@
   color: #63b4b8;
   text-shadow: 4px 4px 0px #000000;
 }
+.title.-second{
+  color: #FFF;
+  text-shadow: none;
+  text-align: center;
+}
