--- a/css/components/main-title.css
+++ b/css/components/main-title.css
@@ -1,10 +1,10 @@
-.title {
+.main-title {
   font-family: "Press Start 2P", sans-serif;
   font-size: 40px;
   color: #63b4b8;
   text-shadow: 4px 4px 0px #000000;
 }
-.title.-second{
+.main-title.-second{
   color: #FFF;
   text-shadow: none;
   text-align: center;
