--- a/css/components/section.css
+++ b/css/components/section.css
@@ -4,3 +4,10 @@
   padding-bottom: 100px;
   border-bottom: 10px solid #7C5E99;
 }
+.section.-bgBlack{
+  background-color: #000;
+  border-bottom: 10px solid #F25A70;
+}
+.section .main-title{
+  margin-bottom: 60px;
+}
