--- a/css/components/skill-tec.css
+++ b/css/components/skill-tec.css
@@ -1,13 +1,17 @@
 .skill-tec{
   display: flex;
+  align-items: center;
   font-family: "Press Start 2P", sans-serif;
   font-size: 25px;
   color: #fff;
 }
 .skill-tec .icon{
   margin-right: 25px;
+  width: 90px;
 }
-
+.skill-tec .title{
+  margin-bottom: 10px;
+}
 .skill-tec .right{
   display: flex;
   flex-direction: column;
