--- a/css/components/main-action.css
+++ b/css/components/main-action.css
@@ -1,4 +1,4 @@
-.action {
+.main-action {
   display: inline-flex;
   align-items: center;
   color: #e2e2e2;
@@ -8,7 +8,7 @@
   text-decoration: none;
   margin-right: 30px;
 }
-.action::before {
+.main-action::before {
   content: "";
   background-color: #63b4b8;
   width: 10px;
