--- a/css/components/main-banner.css
+++ b/css/components/main-banner.css
@@ -1,4 +1,4 @@
-.banner {
+.main-banner {
   box-sizing: border-box;
   background: url(../../assets/img/banner.jpg);
   height: 800px;
@@ -10,16 +10,16 @@
   padding-left: 90px;
 }
 
-.banner .wrapper {
+.main-banner .wrapper {
   display: flex;
   flex-direction: column;
   width: 640px;
 }
-.banner .box {
+.main-banner .box {
   margin-bottom: 40px;
 }
 
-.banner .navigation {
+.main-banner .navigation {
   display: flex;
   justify-content: space-around;
 }
