--- a/css/components/main-box.css
+++ b/css/components/main-box.css
@@ -1,10 +1,10 @@
-.box {
+.main-box {
   display: inline-block;
   background-color: #3a4042;
   box-shadow: 10px 10px 0 #000;
   text-align: center; 
   padding: 44px 44px;
 }
-.box .title{
+.main-box .main-title{
   margin-bottom: 28px;
 }
