--- a/css/components/main-button.css
+++ b/css/components/main-button.css
@@ -1,4 +1,4 @@
-.button {
+.main-button {
   display: inline-block;
   color: #e2e2e2;
   background-color: #664e88;
@@ -9,7 +9,7 @@
     color 200ms ease-in-out;
   text-decoration: none;  
 }
-.button:hover {
+.main-button:hover {
   color: #63b4b8;
   box-shadow: 5px 5px 0px #63b4b8;
   transform: scale(1.05);
