--- a/css/components/main-section.css
+++ b/css/components/main-section.css
@@ -1,13 +1,13 @@
-.section{
+.main-section{
   background-color: #F25A70;
   padding-top: 50px;
   padding-bottom: 100px;
   border-bottom: 10px solid #7C5E99;
 }
-.section.-bgBlack{
+.main-section.-bgBlack{
   background-color: #000;
   border-bottom: 10px solid #F25A70;
 }
-.section .main-title{
+.main-section .main-title{
   margin-bottom: 60px;
 }
