--- a/css/components/main-section.css
+++ b/css/components/main-section.css
@@ -11,3 +11,10 @@
 .main-section .main-title{
   margin-bottom: 60px;
 }
+
+.main-section.-bgPurple{
+  background-color: #7C5E99;
+}
+.main-section.-bdBlack{
+  border-color: #000;
+}
